--- a/scss/layout/_layout-banner.scss
+++ b/scss/layout/_layout-banner.scss
@@ -6,7 +6,7 @@
 .page-head {
 	@include clearfix;
 	box-sizing: border-box;
-	padding: $vertical-spacing $gutter;
+	padding: $vertical-spacing 2.5%;
 	position: relative;
 	z-index: 1000;
 	width: 100%;
