--- a/scss/layout/_layout-contentinfo.scss
+++ b/scss/layout/_layout-contentinfo.scss
@@ -2,3 +2,99 @@
 /* ==========================================================================
    #FOOTER
    ========================================================================== */
+
+.page-foot {
+	background: $grey-darker;
+	padding: ($vertical-spacing*5) 0 ($vertical-spacing*4);
+	text-align: center;
+	
+	a:hover,
+	a:focus {
+		color: $white;
+	}
+}
+
+.page-foot__home-link {
+	border-bottom: none;
+	display: inline-block;
+	margin: (-$vertical-spacing * 2.5) auto ($vertical-spacing * 2.5);
+	opacity: .10;
+	width: 75px;
+}
+
+
+
+
+
+.icon {
+	height: 1em;
+	width: 1em;
+}
+
+
+
+
+
+.hgroup {
+
+	&.align-center {
+		
+		hr {
+			margin-left: auto;
+			margin-right: auto;
+		}
+	}
+}
+
+
+
+.align-left 	{text-align: left;}
+.align-center 	{text-align: center;}
+.align-right 	{text-align: right;}
+
+
+
+
+
+
+.contact-list {
+	list-style: none;
+}
+
+.contact-list__item {
+	display: inline-block;
+	margin-bottom: $vertical-spacing/2;
+	
+	&:first-child {
+		width: 100%;
+	}
+}
+
+.contact-list__link {
+	border-bottom: 0;
+}
+
+
+
+
+
+
+
+
+.social-list {
+	list-style: none;
+	
+	.icon {
+		fill: $color-primary;
+		height: 50px;
+		width: 50px;
+	}
+}
+
+.social-list__item {
+	display: inline-block;
+}
+
+.social-list__link {
+	border-bottom: 0;
+}
