--- a/css/main.css
+++ b/css/main.css
@@ -1008,32 +1008,34 @@ p {
   overflow: hidden; }
 
 .site-nav {
-  background: transparent;
+  background: #2dbec1;
+  border: 0 solid white;
+  box-sizing: border-box;
   display: block;
   height: 100%;
+  opacity: 0;
   overflow: hidden;
   position: fixed;
   top: 0;
+  left: 0;
   text-align: center;
-  transform: translate3d(0, 0, 0);
-  transition: background .75s ease;
+  transform: scale(0.9);
+  transition: border .10s .10s ease-in, opacity .10s .50s ease, transform .10s .50s ease;
   user-select: none;
-  visibility: hidden;
   width: 100%;
   z-index: -1; }
   .show-nav .site-nav {
-    background: #2dbec1;
+    border-width: 16px;
+    opacity: 1;
     overflow-y: auto;
-    visibility: visible;
+    transition: border .05s .40s ease-in, opacity .10s ease-in, transform .20s ease-in;
+    transform: scale(1);
     z-index: 1000; }
   .hide-nav .site-nav {
-    background: transparent;
-    height: 100%;
-    visibility: visible;
-    width: 100%;
     z-index: 1000; }
 
 .site-nav__list {
+  list-style: none;
   margin: 0;
   padding: 0;
   position: absolute;
@@ -1043,28 +1045,38 @@ p {
   width: 100%; }
 
 .site-nav__item {
-  margin: 0;
+  margin: 20px 0;
   opacity: 0;
   transform: translateY(-100px);
-  transition: all 0.5s 0s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
+  transition: all 0.4s 0s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  /* [1] */
+  /* [2] */
+  /* [3] */
+  /* [4] */
+  /* [5] */
+  /* [6] */ }
   .show-nav .site-nav__item {
     opacity: 1;
     transform: translateY(0);
-    transition-delay: .25s;
-    transition-duration: 1s; }
+    transition-delay: .20s;
+    transition-duration: .80s; }
+  @media (min-width: 64em) {
+    .site-nav__item {
+      display: inline-block;
+      margin: 0 40px; } }
 
 .site-nav__link {
   background: transparent;
   border-bottom: none;
-  color: white;
+  color: #0d0f0f;
   display: block;
-  font-size: 30px;
-  font-size: 3rem;
-  line-height: 30px;
-  font-style: italic;
-  font-weight: 900;
-  padding: 5px 0;
-  transition: none;
+  font-family: "ff-good-headline-web-pro-con", "Helvetica Neue", sans-serif;
+  font-size: 40px;
+  font-size: 4rem;
+  line-height: 40px;
+  padding: 5px;
+  transition: all .25s;
+  text-transform: uppercase;
   /* [1] */
   /* [2] */
   /* [3] */
@@ -1073,16 +1085,15 @@ p {
   /* [6] */ }
   .site-nav__link:visited {
     background: transparent;
-    color: white; }
+    color: #0d0f0f; }
   .site-nav__link:hover, .site-nav__link:focus {
-    background: white;
-    color: #2dbec1; }
+    color: white; }
   @media (min-width: 64em) {
     .site-nav__link {
-      font-size: 45px;
-      font-size: 4.5rem;
-      line-height: 45px;
-      padding: 10px 0; } }
+      font-size: 60px;
+      font-size: 6rem;
+      line-height: 60px;
+      padding: 10px 5px; } }
 
 .site-nav__link--current {
   background: #2dbec1; }
@@ -1174,85 +1185,6 @@ p {
 .show-nav .page-head__toggle span:before,
 .show-nav .page-head__toggle span:after {
   transition-delay: 0s, .25s; }
-
-.site-wrap {
-  overflow: hidden;
-  width: 100%;
-  height: 100%; }
-
-.site-nav {
-  position: fixed;
-  overflow: hidden;
-  top: 0;
-  background: transparent;
-  text-align: left;
-  display: block;
-  -o-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  -moz-transform: translate3d(0, 0, 0);
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-  -webkit-transition: background 500ms ease;
-  -moz-transition: background 500ms ease;
-  transition: background 500ms ease;
-  z-index: 999999999;
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  height: 100%;
-  width: 100%;
-  text-align: center;
-  z-index: 0;
-  -moz-box-shadow: none !important;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important; }
-
-.show-nav .site-nav {
-  z-index: 1; }
-
-.hide-nav .site-nav {
-  background: transparent;
-  height: 100%;
-  width: 100%;
-  z-index: 1; }
-
-.site-nav ul {
-  position: absolute;
-  left: 0%;
-  width: 100%;
-  top: 50%;
-  transform: translateY(-50%); }
-
-.site-nav ul li a {
-  display: block;
-  text-decoration: none !important;
-  height: 100px;
-  line-height: 100px;
-  font-size: 50px;
-  color: #fff;
-  opacity: 0;
-  border: none;
-  transition: all 400ms cubic-bezier(0.17, 0.67, 0.38, 1.46);
-  transform: scale(0.3); }
-
-.show-nav .site-nav ul li a {
-  opacity: 1;
-  transform: scale(1); }
-
-.site-nav ul li:nth-child(1) a {
-  transition-delay: 0; }
-
-.site-nav ul li:nth-child(2) a {
-  transition-delay: 0.025s; }
-
-.site-nav ul li:nth-child(3) a {
-  transition-delay: 0.050s; }
-
-.site-nav ul li:nth-child(4) a {
-  transition-delay: 0.075s; }
 
 .band {
   width: 100%; }
