--- a/scss/layout/_layout-nav.scss
+++ b/scss/layout/_layout-nav.scss
@@ -17,37 +17,42 @@
  }
 
 .site-nav {
-	background: transparent;
+	background: $color-primary;
+	border: 0 solid $white;
+	box-sizing: border-box;
 	display: block;
 	height: 100%;
+	opacity: 0;
 	overflow: hidden;
 	position: fixed;
 	top: 0;
+	left: 0;
 	text-align: center;
-	transform: translate3d(0, 0, 0);
-	transition: background .75s ease;
+	transform: scale(.90);
+	transition: border .10s .10s ease-in, opacity .10s .50s ease, transform .10s .50s ease;
 	user-select: none;
-	visibility: hidden;
+	//visibility: hidden;
 	width: 100%;
 	z-index: -1;
 	
 	.show-nav & {
-		background: $color-primary;
+		border-width: 16px;
+		opacity: 1;
 		overflow-y: auto;
-		visibility: visible;
+		transition: border .05s .40s ease-in, opacity .10s ease-in, transform .20s ease-in;
+		//visibility: visible;
+		transform: scale(1);
 		z-index: 1000;
 	}
 	
 	.hide-nav & {
-		background: transparent;
-		height: 100%;
-		visibility: visible;
-		width: 100%;
+		//visibility: visible;
 		z-index: 1000;
 	}
 }
 
 .site-nav__list {
+	list-style: none;
 	margin: 0;
 	padding: 0;
 	position: absolute;
@@ -58,46 +63,50 @@
 }
 
 .site-nav__item {
-	margin: 0;
+	margin: $vertical-spacing 0;
 	opacity: 0;
 	transform: translateY(-100px);
-	transition: all .5s 0s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+	transition: all .40s 0s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 	
 	.show-nav & {
 	    opacity: 1;
 		transform: translateY(0);
-		transition-delay: .25s;
-		transition-duration: 1s;
+		transition-delay: .20s;
+		transition-duration: .80s;
     }
+    
+    @include bp(bp5) {
+	    display: inline-block;
+		margin: 0 ($vertical-spacing * 2);
+	}
 }
 
 .site-nav__link {
 	background: transparent;
 	border-bottom: none;
-	color: $white;
+	color: $grey-darker;
 	display: block;
-	@include font-size(30);
-	line-height: 30px;
-	font-style: italic;
-	font-weight: 900;
-	padding: ($vertical-spacing / 4) 0;
-	transition: none;
+	font-family: $heading-font-family;
+	@include font-size(40);
+	line-height: 40px;
+	padding: $vertical-spacing / 4;
+	transition: all .25s;
+	text-transform: uppercase;
 	
 	&:visited {
 		background: transparent;
-		color: $white;
+		color: $grey-darker;
 	}
 	
 	&:hover,
 	&:focus {
-		background: $white;
-		color: $color-primary;
+		color: $white;
 	}
 	
 	@include bp(bp5) {
-		@include font-size(45);
-		line-height: 45px;
-		padding: ($vertical-spacing / 2) 0;
+		@include font-size(60);
+		line-height: 60px;
+		padding: ($vertical-spacing / 2) ($vertical-spacing / 4);
 	}
 }
 
@@ -109,10 +118,6 @@
 		background: $white;
 	}
 }
-
-
-
-
 
 
 
@@ -232,100 +237,3 @@
 
 }
 
-
-
-
-
-
-
-
-
-.site-wrap {
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-}
-
-.site-nav {
-    position: fixed;
-    overflow: hidden;
-    top: 0;
-    background: transparent;
-    text-align: left;
-    display: block;
-    -o-transform: translate3d(0, 0, 0);
-    -ms-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-    -webkit-transition: background 500ms ease;
-    -moz-transition: background 500ms ease;
-    transition: background 500ms ease;
-    z-index: 999999999;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    height: 100%;
-    width: 100%;
-    text-align: center;
-    z-index: 0;
-    -moz-box-shadow: none!important;
-    -webkit-box-shadow: none!important;
-    box-shadow: none!important;
-}
-
-.show-nav .site-nav {
-    z-index: 1;
-}
-
-.hide-nav .site-nav {
-    background: transparent;
-    height: 100%;
-    width: 100%;
-    z-index: 1;
-}
-
-.site-nav ul {
-    position: absolute;
-    left: 0%;
-    width: 100%;
-    top: 50%;
-    transform: translateY(-50%);
-}
-
-.site-nav ul li a {
-    display: block;
-    text-decoration: none!important;
-    height: 100px;
-    line-height: 100px;
-    font-size: 50px;
-    color: #fff;
-    opacity: 0;
-    border: none;
-    transition: all 400ms cubic-bezier(.17, .67, .38, 1.46);
-    transform: scale(0.3);
-}
-
-.show-nav .site-nav ul li a {
-    opacity: 1;
-    transform: scale(1);
-}
-
-.site-nav ul li:nth-child(1) a {
-    transition-delay: 0;
-}
-
-.site-nav ul li:nth-child(2) a {
-    transition-delay: 0.025s;
-}
-
-.site-nav ul li:nth-child(3) a {
-    transition-delay: 0.050s;
-}
-
-.site-nav ul li:nth-child(4) a {
-    transition-delay: 0.075s;
-}
