--- a/css/main.css
+++ b/css/main.css
@@ -1020,8 +1020,9 @@ p {
   left: 0;
   text-align: center;
   transform: scale(0.9);
-  transition: border .10s .10s ease-in, opacity .10s .50s ease, transform .10s .50s ease;
+  transition: border .10s .10s ease-in, opacity .10s .40s ease, transform .10s .40s ease, visibility .10s .40s;
   user-select: none;
+  visibility: hidden;
   width: 100%;
   z-index: -1; }
   .show-nav .site-nav {
@@ -1029,9 +1030,11 @@ p {
     opacity: 1;
     overflow-y: auto;
     transition: border .05s .40s ease-in, opacity .10s ease-in, transform .20s ease-in;
+    visibility: visible;
     transform: scale(1);
     z-index: 1000; }
   .hide-nav .site-nav {
+    visibility: visible;
     z-index: 1000; }
 
 .site-nav__list {
@@ -1047,7 +1050,7 @@ p {
 .site-nav__item {
   margin: 20px 0;
   opacity: 0;
-  transform: translateY(-100px);
+  transform: translateY(-150px);
   transition: all 0.4s 0s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   /* [1] */
   /* [2] */
